fix: fix card grid on mobile

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 24px;
 }
 
@@ -50,4 +50,10 @@
   width: 100%;
   aspect-ratio: 3 / 1.25;
   object-fit: cover;
+}
+
+@media (min-width: 900px) {
+  .cards > ul {
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  }
 }
